force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Allow_Social_Sharing__c.field-meta.xml
<CustomField>
    <fullName>refedge__Allow_Social_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Social Sharing</label>
    <type>Checkbox</type>
</CustomField>