force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>