force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Featured_Content__c.field-meta.xml
<CustomField>
    <fullName>refedge__Featured_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Featured Content</description>
    <inlineHelpText>Featured content items appear at the top of the Reference Content search results. Users may choose to see only Featured content by filtering on this Reference Content Type. The Featured setting is managed manually.</inlineHelpText>
    <label>Featured Content</label>
    <type>Checkbox</type>
</CustomField>