force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Is_File_Changed__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_File_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is File Changed</label>
    <type>Checkbox</type>
</CustomField>