force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Number_of_Invitations__c.field-meta.xml
<CustomField>
    <fullName>refedge__Number_of_Invitations__c</fullName>
    <inlineHelpText>Number of Invitations this particular content item has been included in.</inlineHelpText>
    <label>Number of Invitations</label>
    <summaryForeignKey>refedge__Invitation_ReferenceContent__c.refedge__Reference_Content__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>