force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Number_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Number_of_Ratings__c</fullName>
    <inlineHelpText>Number of times recipients have submitted a rating from a Microsite for this particular content item.</inlineHelpText>
    <label>Number of Ratings</label>
    <summaryFilterItems>
        <field>refedge__Invitation_ReferenceContent__c.refedge__Rating__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>refedge__Invitation_ReferenceContent__c.refedge__Rating__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>refedge__Invitation_ReferenceContent__c.refedge__Reference_Content__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>