force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Review_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>