force-app/main/default/objects/refedge__Reference_Content__c/fields/refedge__Search_Terms_keywords__c.field-meta.xml
<CustomField>
    <fullName>refedge__Search_Terms_keywords__c</fullName>
    <label>Search Terms (keywords)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>